--- a/index.html
+++ b/index.html
@@ -1,10 +1,59 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
-        <title>My First Webpage</title>
+        <title>Airpod Models and Their Features</title>
     </head>
     <body>
-        <h1>Hello, World!</h1>
-        <p>This is my very first webpage.</p>
+        <h1>Airpod Models and Their Features</h1>
+        <p>By Daniel Olownia</p>
+
+        <section>
+            <h2>AirPods (1st Generation)</h2>
+            <!-- Photo slot -->
+            <img src="https://support.apple.com/library/APPLE/APPLECARE_ALLGEOS/SP750/SP750-airpods.jpeg" alt="AirPods 1st Generation Photo" width="200">
+            <ul>
+                <li>Release Year: 2016</li>
+                <li>Features: W1 chip, up to 5 hours listening time, double-tap for Siri</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>AirPods (2nd Generation)</h2>
+            <!-- Photo slot -->
+            <img src="https://www.apple.com/v/airpods-2nd-generation/e/images/meta/og__bz8g5g9sbyoi_overview.png" alt="AirPods 2nd Generation Photo" width="200">
+            <ul>
+                <li>Release Year: 2019</li>
+                <li>Features: H1 chip, "Hey Siri" support, wireless charging case option</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>AirPods Pro</h2>
+            <!-- Photo slot -->
+            <img src="https://tse1.mm.bing.net/th?id=OIF.KudDKXdFU2y%2bmc%2foZ0aggQ&pid=Api&P=0&h=180" alt="AirPods Pro Photo" width="200">
+            <ul>
+                <li>Release Year: 2019</li>
+                <li>Features: Active Noise Cancellation, Transparency mode, customizable fit</li>
+            </ul>
+        </section>
+<section>
+            <h2>AirPods (3rd Generation)</h2>
+            <!-- Photo slot -->
+            <img src="https://tse3.mm.bing.net/th/id/OIP.L5n1vcvXQMCyWWaeqFSvCgHaKu?pid=Api&P=0&h=180" alt="AirPods 3rd Generation Photo" width="200">
+            <ul>
+                <li>Release Year: 2021</li>
+                <li>Features: Spatial Audio, Adaptive EQ, sweat and water resistance</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>AirPods Pro (2nd Generation)</h2>
+            <!-- Photo slot -->
+            <img src="https://tse3.mm.bing.net/th/id/OIF.eQPDd94bnKiHLt819072uQ?pid=Api&P=0&h=180" alt="AirPods Pro 2nd Generation Photo" width="200">
+            <ul>
+                <li>Release Year: 2022</li>
+                <li>Features: Improved ANC, Adaptive Transparency, MagSafe charging</li>
+            </ul>
+        </section>
     </body>
 </html>
